--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.maindisp">
+        package="com.example.maindisp">
 
     <application
             android:name=".MyApp"
@@ -10,33 +10,26 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Disp22">
-        </activity>
-        <activity android:name=".Disp20">
-        </activity>
-        <activity android:name=".Disp18">
-        </activity>
-        <activity android:name=".Disp08">
-        </activity>
+        <activity android:name=".Disp_TEST"></activity>
+        <activity android:name=".Disp22"></activity>
+        <activity android:name=".Disp20"></activity>
+        <activity android:name=".Disp18"></activity>
+        <activity android:name=".Disp08"></activity>
         <activity
                 android:name=".Disp21"
                 android:label="@string/title_activity_disp21"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".Disp02"
                 android:label="@string/title_activity_disp02"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".Disp07">
-        </activity>
-        <activity android:name=".Disp11">
-        </activity>
+                android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Disp07"></activity>
+        <activity android:name=".Disp11"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
