--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,26 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Disp_TEST"></activity>
-        <activity android:name=".Disp22"></activity>
-        <activity android:name=".Disp20"></activity>
-        <activity android:name=".Disp18"></activity>
-        <activity android:name=".Disp08"></activity>
+        <receiver
+                android:name=".Receiver"
+                android:enabled="true"
+                android:exported="true"></receiver>
+
+        <activity android:name=".Alarm" />
+        <activity android:name=".Disp13" />
+        <activity android:name=".Disp22" />
+        <activity android:name=".Disp18" />
+        <activity android:name=".Disp08" />
         <activity
                 android:name=".Disp21"
                 android:label="@string/title_activity_disp21"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".Disp02"
                 android:label="@string/title_activity_disp02"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Disp07"></activity>
-        <activity android:name=".Disp11"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Disp07" />
+        <activity android:name=".Disp11" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
